--- a/Gafe_editor/public/css/body.css
+++ b/Gafe_editor/public/css/body.css
@@ -1,6 +1,5 @@
-
 body{
-    color:#00000;
+    color:#000000;
     /*background-image:url(img/fondo20.jpg);*/
     background-color: #4e4f9b;
     background-size: cover;
@@ -27,7 +26,8 @@ body{
 }
 .cuadro2{
     background-color:#0c0c0c; 
-        border: 1px;size: 150px;
+        border: 1px;
+        size: 150px;
         border-style: solid;
         border-color: #0c0c0c;
         padding: 800px;
