--- a/Gafe_editor/public/css/div_contenido_publicidad.css
+++ b/Gafe_editor/public/css/div_contenido_publicidad.css
@@ -1,13 +1,14 @@
 .columna {
     width:50%;
     float:left;
-  }
+    margin-left: 20px; 
+    margin-top: 250px;
+    color: rgb(248, 248, 248);
+}
   
-  @media (max-width: 500px) {
-    
-    .columna {
-      width:auto;
-      float:none;
-    }
-    
+@media (max-width: 500px) {
+  .columna {
+    width:auto;
+    float:none;
   }
+}
