--- a/Gafe_editor/public/css/header.css
+++ b/Gafe_editor/public/css/header.css
@@ -51,3 +51,13 @@
       float: none;
     }
   }
+
+  /*imagen */
+.img-edit:hover{
+  border-radius:50%;
+  -webkit-border-radius:50%;
+  box-shadow: 0px 0px 15px 15px #ec731e;
+  -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+}
