--- a/Gafe_editor/public/css/body.css
+++ b/Gafe_editor/public/css/body.css
@@ -42,3 +42,15 @@ body{
     padding-bottom: 0px;
     padding-left: 15px;
 }
+
+
+/*imagen*/
+
+.imagen:hover{
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 15px 15px #6230d6;
+    -webkit-box-shadow: 0px 0px 15px 15px #6230d6;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
