--- a/Gafe_editor/public/css/estilos.css
+++ b/Gafe_editor/public/css/estilos.css
@@ -1,29 +1,42 @@
-.cuadro1{
-   background-color: #eee;
-  margin-top: 150px;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  border-bottom-width: 0px;
-  height: 200px;
-  margin-bottom: 0px;
+.carrruseltext{
+    color: black;
+}
 
-        }
- .diseno{
- 	margin-left: 500px;
+.bg-dark {
+    background-color: rgb(18, 124, 189)!important;
+}
 
- }
- .texto{
- 	width: 526.22222px;
- }
- .diseno2{
- 	margin-left: 400px;
+.navbarnav2{
+    margin-right: 38%;
+}
 
- }
- .diseno3{
- 	margin-left: 200px;
+.imagen:hover{
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 15px 15px rgb(52, 137, 186);
+    -webkit-box-shadow: 0px 0px 15px 15px rgb(52, 137, 186);
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
 
- }
- .disenoBoton{
- 	margin-top: 60px;
-    margin-left: 480px;
- }
+/*para la pagina de login*/
+#centrado{
+    padding-top: 100px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.fondoLogin{
+    background-color: rgb(233, 236, 239);
+}
+
+.jumbotron{
+    background-color: rgb(255, 255, 255);
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.bg-dark1 {
+    background-color: rgb(68, 80, 93)!important;
+}
